[package]
name = "vaultfs"
version = "0.1.0"
authors = ["corpusculum"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
libc = "0.2.51"
env_logger = "0.6.0"
time = "0.1.42"
clap = "2.33.0"
reqwest = "0.9.22"
hyper = "0.12.22"
serde = "1.0.102"
serde_json = "1.0"
config = "0.9"
serde_derive = "1.0.102"
